--- a/client/src/components/product-overview-module/ProductOverview.scss
+++ b/client/src/components/product-overview-module/ProductOverview.scss
@@ -5,32 +5,27 @@
   width: 100vw;
   display: flex;
   flex-wrap: wrap;
-  // grid-template-columns: 1fr 1fr;
-  // grid-template-rows: 1fr;
-  gap: 20px;
+  gap: 1.5rem;
   .product-overview-image-view {
-    @include set-size(100%, 50vw);
-    padding: 3rem 4rem 0 4rem;
-    // grid-row: 1/4;
-    // grid-column: 1/2;
+    @include set-size(100vh, 50vw);
+    // padding: 3rem 4rem 0 4rem;
   }
   .product-overview-info-style-container {
     @include flex-column();
     justify-content: flex-start;
-    padding: 0 4rem 0 4rem;
-
-    // @include set-size(100%, 40vw);
+    padding: 1rem 0 0 0;
+    @include set-size(100%, 45vw);
 
     .product-overview-product-info {
-      @include set-size(100, 100%);
+      @include set-size(100%, 100%);
       margin: 0;
       padding: 0;
     }
     .product-overview-style-selector {
-      @include set-size(100, 100%);
+      @include set-size(100%, 100%);
     }
     .product-overview-add-to-cart {
-      @include set-size(100, 100%);
+      @include set-size(100%, 100%);
     }
   }
 }
